@@ -19,14 +19,15 @@
 #Software Foundation, 51 Franklin Street, Fifth Floor, Boston, MA
 #02110-1301, USA.
 
-# ACX_PROG_CC_WARNING_OPTS(WARNINGS, [VARIABLE = WARN_CFLAGS@)
+# ACX_PROG_CC_WARNING_OPTS(WARNINGS, [VARIABLE = WARN_CFLAGS)
 #   Sets @VARIABLE@ to the subset of the given options which the
 #   compiler accepts.
 AC_DEFUN([ACX_PROG_CC_WARNING_OPTS],
 [AC_REQUIRE([AC_PROG_CC])dnl
 m4_pushdef([acx_Var], [m4_default([$2], [WARN_CFLAGS])])dnl
 AC_SUBST(acx_Var)dnl
-acx_Var=
+m4_expand_once([acx_Var=
+],m4_quote(acx_Var=))dnl
 save_CFLAGS="$CFLAGS"
 for option in $1; do
   AS_VAR_PUSHDEF([acx_Woption], [acx_cv_prog_cc_warning_$option])
@@ -51,8 +52,9 @@ AC_DEFUN([ACX_PROG_CC_WARNING_ALMOST_PEDANTIC],
 [AC_REQUIRE([AC_PROG_CC])dnl
 m4_pushdef([acx_Var], [m4_default([$2], [WARN_PEDANTIC])])dnl
 AC_SUBST(acx_Var)dnl
+m4_expand_once([acx_Var=
+],m4_quote(acx_Var=))dnl
 AS_VAR_PUSHDEF([acx_Pedantic], [acx_cv_prog_cc_pedantic_$1])dnl
-acx_Var=
 AS_IF([test "$GCC" = yes],
 [AC_CACHE_CHECK([whether $CC supports -pedantic $1], acx_Pedantic,
 [save_CFLAGS="$CFLAGS"
@@ -68,23 +70,25 @@ AS_VAR_POPDEF([acx_Pedantic])dnl
 m4_popdef([acx_Var])dnl
 ])# ACX_PROG_CC_WARNING_ALMOST_PEDANTIC
 
-# ACX_PROG_CC_WARNINGS_ARE_ERRORS([x.y.z])
-#   sets WERROR to "-Werror" if the compiler is GCC >=x.y.z, or if
+# ACX_PROG_CC_WARNINGS_ARE_ERRORS([x.y.z], [VARIABLE = WERROR])
+#   sets @VARIABLE@ to "-Werror" if the compiler is GCC >=x.y.z, or if
 #   --enable-werror-always was given on the command line, otherwise
 #   to nothing.
 #   If the argument is the word "manual" instead of a version number,
-#   then WERROR will be set to -Werror only if --enable-werror-always
+#   then @VARIABLE@ will be set to -Werror only if --enable-werror-always
 #   appeared on the configure command line.
 AC_DEFUN([ACX_PROG_CC_WARNINGS_ARE_ERRORS],
 [AC_REQUIRE([AC_PROG_CC])dnl
-AC_SUBST([WERROR])dnl
-WERROR=
+m4_pushdef([acx_Var], [m4_default([$2], [WERROR])])dnl
+AC_SUBST(acx_Var)dnl
+m4_expand_once([acx_Var=
+],m4_quote(acx_Var=))dnl
 AC_ARG_ENABLE(werror-always, 
     AS_HELP_STRING([--enable-werror-always],
 		   [enable -Werror despite compiler version]),
 [], [enable_werror_always=no])
 AS_IF([test $enable_werror_always = yes],
-      [WERROR=-Werror],
+      [acx_Var="$acx_Var${acx_Var:+ }-Werror"])
  m4_if($1, [manual],,
  [AS_VAR_PUSHDEF([acx_GCCvers], [acx_cv_prog_cc_gcc_$1_or_newer])dnl
   AC_CACHE_CHECK([whether $CC is GCC >=$1], acx_GCCvers,
@@ -98,6 +102,7 @@ AS_IF([test $enable_werror_always = yes],
    [AS_VAR_SET(acx_GCCvers, yes)],
    [AS_VAR_SET(acx_GCCvers, no)])])
  AS_IF([test AS_VAR_GET(acx_GCCvers) = yes],
-       [WERROR=-WerrorB])
-  AS_VAR_POPDEF([acx_GCCvers])]))
+       [acx_Var="$acx_Var${acx_Var:+ }-Werror"])
+  AS_VAR_POPDEF([acx_GCCvers])])
+m4_popdef([acx_Var])dnl
 ])# ACX_PROG_CC_WARNINGS_ARE_ERRORS
