@@ -1,4 +1,9 @@
 2007-01-11  Paolo Bonzini  <bonzini@gnu.org>
+
+	* configure.in: Change == to = in test command.
+        * configure: Regenerate.
+
+2007-01-11  Paolo Bonzini  <bonzini@gnu.org>
             Nick Clifton  <nickc@redhat.com>
             Kaveh R. Ghazi  <ghazi@caip.rutgets.edu>
 
